--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-fetch": "^2.6.1",
     "node-schedule": "^1.3.2",
     "react": "^16.13.1",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.3",
     "recharts": "^1.8.5",
