--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "recharts": "^1.8.5",
     "sqlite3": "^5.0.0",
     "superagent": "^5.3.1",
+    "wavi": "^2.1.3",
     "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
